# opencv_and_ocr

./: image_to_process.py  output.txt  playing_around.py  pyproject.toml
src/opencv_ocr/: decorators.py  exception_handling.py  image_to_extract.py  image_to_process.py  playing_around.py
src/opencv_ocr/output/: example_output.txt
src/pack1/: image_to_extract.py  playing_around.py
